--- a/backend/package.json
+++ b/backend/package.json
@@ -2,10 +2,10 @@
   "name": "backend_smart_parking",
   "version": "1.0.0",
   "description": "",
-  "main": "src/index.js",
+  "main": "src/app.js",
   "scripts": {
-    "start": "node src/index.js",
-    "dev": "nodemon src/index.js",
+    "start": "node src/app.js",
+    "dev": "nodemon src/app.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [],
@@ -19,6 +19,7 @@
     "dotenv": "^17.2.3",
     "express": "^5.2.1",
     "mysql2": "^3.16.2",
+    "nodemailer": "^8.0.0",
     "prisma": "^7.3.0"
   },
   "devDependencies": {
