--- a/backend/package.json
+++ b/backend/package.json
@@ -21,6 +21,7 @@
     "multer": "^2.0.2",
     "mysql2": "^3.16.2",
     "nodemailer": "^8.0.1",
+    "pdfkit": "^0.17.2",
     "prisma": "^7.3.0",
     "socket.io": "^4.8.3"
   },
